--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
-    "react-credit-cards": "^0.8.3",
+    "react-credit-cards-2": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
