--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run seed && cd frontend && rm -rf node_modules && npm install --cache /tmp/empty-cache && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": [
