--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run seed && cd frontend && rm -rf node_modules && npm install --cache /tmp/empty-cache && npm install && npm run build"
+    "start-watch": "set DEBUG=yum-food* && nodemon  --verbose ",
+    "heroku-postbuild": "npm run seed && cd frontend && rm -rf node_modules && npm install --cache /tmp/empty-cache && npm install && npm run build",
+    "dev": "concurrently --kill-others  \"npm run start-watch\" \"npm run lint-w\"",
+    "seed":"set DEBUG=yum-food* && node server/utils/seeder.js",
+    "lint": "esw . --fix",
+    "lint-w": "esw . --fix  -w",
+    "test:watch": "jest  --setupFiles dotenv/config --watchAll",
+    "coveralls": "jest  --setupFiles dotenv/config --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "eslintConfig": {
     "extends": [
