--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,26 +1,14 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      nodejs: 16  
-    commands:
-      - npm install
   pre_build:
     commands:
-      - echo Installing source NPM dependencies...
+      - npm install
   build:
     commands:
-      - echo Build started on `date`
-      - npm run heroku-postbuild
-      - npm prune --production
-  post_build:
-    commands:
-      - echo Build completed on `date`
+      - npm run build
 artifacts:
-  type: zip
   files:
     - '**/*'
-cache:
-  paths:
-    - node_modules
+  discard-paths: no
+  base-directory: build
