--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,24 @@
 version: 0.2
 
 phases:
-  pre_build:
+  install:
+    runtime-versions:
+      nodejs: 16  
     commands:
       - npm install
+  pre_build:
+    commands:
+      - echo Installing source NPM dependencies...
   build:
     commands:
       - npm run build
+  post_build:
+    commands:
+      - echo Build completed on `date`
 artifacts:
+  type: zip
   files:
     - '**/*'
-  discard-paths: no
-  base-directory: build
+cache:
+  paths:
+    - node_modules
