--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,17 +1,13 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      nodejs: 16  
-    commands:
-      - npm install
   pre_build:
     commands:
       - echo Installing source NPM dependencies...
+      - npm install
   build:
     commands:
       - npm run build
   post_build:
     commands:
-      - echo Build completed on `date`
+      - echo Build completed
